# half-checking-propagators

./: .gitignore  README.md
code/: CMakeLists.txt  LICENSE  README.md
code/cmake/modules/: FindGecode.cmake
code/data/: README.md
code/data/tsplib/: download.sh  index.html
code/script/: run.sh
code/src/: CMakeLists.txt  config.h.in
code/src/models/: CMakeLists.txt  tsp.cpp  tsp.h  tsp_common.cpp  tsp_common.h
code/src/programs/: CMakeLists.txt  tsp_main.cpp  tsp_prop_amount.cpp
code/src/propagators/: CMakeLists.txt  christofides.cpp  hk_1tree.cpp  no_dominated_edges.cpp  no_warnsdorff_dominated_edges.cpp  no_warnsdorff_dominated_edges2.cpp  propagators.h
code/src/utilities/: CMakeLists.txt  disjoint-set.h  geometry.h  graph.cpp  graph.h  runner.h  spatial_index.h  tsp.cpp  tsp.h  value_selection.h
code/test/: CMakeLists.txt  geometry_tests.cpp  graph_tests.cpp  spatial_index_tests.cpp  test_main.cpp  test_util.h  tsp_utilities_tests.cpp
paper/: Makefile  README.md  half-checking.tex  references.bib
